<resources>
    <string name="app_name">UST Social App</string>
    <string name="menu_ustSocialAppp_settings">Settings</string>
    <string name="menu_ustSocialAppp_logout">Logout</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_profile_setting_basic">Profile Setup</string>
    <string name="title_activity_profile_setting_more">Profile Setup</string>
    <string name="title_activity_ustsocial_app_main">UST Social App</string>
    <string name="title_activity_add_new_story">Create a New Post</string>
    <string name="title_activity_add_new_vote">Create a New Vote</string>
    <string name="title_activity_create_individual_chat">Create Individual Chat</string>
    <string name="title_activity_create_group_chat">Create Group Chat</string>
    <string name="title_activity_instant_chat_room">Instant Chatroom</string>
    <string name="title_activity_individual_chat_room">Individual Chatroom</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_my_blog">My Blog</string>
    <string name="title_activity_show_blog_content">Blog</string>
    <string name="title_activity_create_new_blog">Create New Blog</string>
    <string name="title_activity_view_profile">View Profile</string>
    <string name="title_activity_view_blog">View Blog</string>
    <string name="title_activity_my_friend_list">My Friend List</string>
    <string name="title_activity_instant_add_friend">Instant Add Friend</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_confirm_reset_password">Confirm Reset Password</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_add_new_hashtag">Add New Hashtag</string>
    <string name="title_activity_friend_request">Friend Request</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register for a new account</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_comment">Comment</string>
    <string name="action_attitude">Attitude</string>
    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_addStory">Add Story</string>
    <string name="action_instant_chatroom">Instant Chatroom</string>
    <string name="action_instant_chatroom2">Instant ChatroomB</string>
    <string name="action_edit">Edit</string>
    <string name="action_friend_list">Friend List</string>
    <string name="action_blog">Blog</string>
    <string name="action_create">Create</string>
    <string name="action_instant_add_fd">Instant Add Friend</string>
    <string name="action_save">Save</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_itsc">ITSC</string>
    <string name="hint_display_name">Display Name</string>
    <string name="hint_personal_description">Hi...</string>
    <string name="hint_title">Title of your post</string>
    <string name="hint_hashtags">Hashtags (Optional)</string>
    <string name="hint_content">Content</string>
    <string name="hint_question">Question</string>
    <string name="hint_option">Option</string>
    <string name="hint_group_name">Group Name</string>
    <string name="text_username_unique">Username (must be unique)</string>
    <string name="text_password">Password</string>
    <string name="text_remember">Remember me</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_email">Email</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_itsc">ITSC</string>
    <string name="text_agreement">I have read and agreed with the terms of services and regulations.</string>
    <string name="text_display_name">Display Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_date_of_birth">Date Of Birth</string>
    <string name="text_country">Country</string>
    <string name="text_student_category">Student Category</string>
    <string name="text_faculty">Faculty</string>
    <string name="text_major">Major</string>
    <string name="text_year_of_study">Year Of Study</string>
    <string name="text_profile_picture">Profile Picture</string>
    <string name="text_personal_description">Personal Description</string>
    <string name="text_title">Title</string>
    <string name="text_hashtags">Hashtags</string>
    <string name="text_content">Content</string>
    <string name="text_question">Question</string>
    <string name="text_options">Options</string>
    <string name="text_option_1">Option 1</string>
    <string name="text_option_2">Option 2</string>
    <string name="text_option">Option </string>
    <string name="text_options_more">Add more options</string>
    <string name="text_group_name">Group Name</string>
    <string name="text_add_post">Create New Blog</string>
    <string name="text_confirm_reset">Your password has been reset by the system. Please check your email in order to get your new password.</string>
    <string name="text_username">Username</string>
    <string name="option_gender_male">Male</string>
    <string name="option_gender_female">Female</string>
    <string name="option_gender_default">X</string>
    <string name="option_student_category_local">Local</string>
    <string name="option_student_category_mainland">Mainland</string>
    <string name="option_student_category_international">International</string>
    <string name="option_student_category_default">X</string>
    <string name="menu_post">Create a Post</string>
    <string name="menu_vote">Create a Vote</string>
    <string name="login_des">Please input the Username/Password!</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="profileSettingBasic_des">Please fill in all of the information below. You may choose to SHOW or HIDE each of the information in your profile page. You can also change your choices in the Profile page later.</string>
    <string name="map_des">You are now in</string>
    <string name="map_name">Academic Building</string>
    <string name="map_location">Location</string>
    <string name="chat_person">Friend</string>
    <string name="createChat_des">Select group members</string>
    <string name="instantChat_people">There are ? people</string>
    <string name="chat_people">Chat Member</string>
    <string name="switch_show">Show</string>
    <string name="switch_hide">Hide</string>
</resources>