<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csefyp2016.gib3.ustsocialapp.SignUp"
    tools:showIn="@layout/activity_sign_up">

    <ScrollView
        android:id="@+id/v_signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <LinearLayout
            android:id="@+id/f_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/debug_signUp"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_signUp_warning"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center"
                android:visibility="gone"
                android:textSize="@dimen/textView_description_size" />

            <TextView
                android:text="@string/text_username_unique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_username"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/i_signUp_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_password"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/i_signUp_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_password_confirm"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/i_signUp_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_email"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/i_signUp_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/text_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_full_name"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/i_signUp_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/text_itsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_itsc"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/i_signUp_itsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_itsc"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:text="@string/text_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox_signUp_agree"
                android:layout_weight="2.13"
                android:textSize="@dimen/textView_title_size"
                android:textStyle="bold"
                android:textAlignment="gravity"
                android:checked="false"
                android:contextClickable="false"
                android:minHeight="65dp" />

            <Button
                android:id="@+id/b_signUp_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:background="@android:color/holo_orange_dark"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
