<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csefyp2016.gib3.ustsocialapp.SignIn"
    tools:showIn="@layout/activity_sign_in">

    <ScrollView
        android:id="@+id/v_signin_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <LinearLayout
            android:id="@+id/f_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/image_signIn_logo"
                android:layout_height="150dip"
                android:layout_width="match_parent" />

            <TextView
                android:text="@string/login_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_signIn_login_fail"
                android:textSize="@dimen/textView_description_size"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="invisible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray">

                <AutoCompleteTextView
                    android:id="@+id/i_signIn_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:password="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray">

                <EditText
                    android:id="@+id/i_signIn_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:labelFor="@+id/b_signIn_forgot_password"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_signIn_remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:text="@string/text_remember" />

                <Button
                    android:id="@+id/b_signIn_forgot_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
                    android:text="@string/login_forgot"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/b_signIn_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@android:color/holo_orange_dark"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/b_signIn_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:background="@android:color/holo_orange_dark"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
