<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create_group_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csefyp2016.gib3.ustsocialapp.CreateGroupChat"
    tools:showIn="@layout/activity_create_group_chat">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/text_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_createGroupChat_group_name"
            android:textSize="@dimen/textView_title_size"
            android:textColor="@android:color/background_dark" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_group_name"
                android:id="@+id/i_createGroupChat_group_name" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/createChat_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_createGroupChat_select_fd"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/textView_description_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/f_createGroupChat_list" />
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:text="@string/action_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_createGroupChat_create"
            android:background="@android:color/holo_orange_dark"
            android:textSize="@dimen/button_text_size"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>

</RelativeLayout>
